          may specoify a configuration that defines the _POSIX_C_SOURCE macro, 
          that is, type the configure line :

             ./configure CFLAGS='-D_POSIX_C_SOURCE=200112'

          However, The NetBSD headers does not conform to POSIX.1 and perform 
          wrong function exposures, so that if you use, it, you might need to 
          specify _NETBSD_SOURCE macro.

THURSDAY 17TH, APRIL

        - Added some translation message in the locale.

        - Added new manual pages and lots of fixes in the manual pages.

        - Added SHIFT command. It can be really easy to manage argument, now, 
          however, I did not preform deep test on the command so that it might 
          still be not reliable.

        - Added /F switch to ALIAS command. This allows user to redefine 
          internal commands and symbols, what was not possible previously. I 
          decided to let user override internal commands because I found it to 
          be an interesting thing to hack arround, allowing to set up 
          replacement commands for some batch that needs enhanced 
          compatibility features (although they should not need such 
          compatibility features).

        - Fixed a bug in DOS9_THREAD.C, threads functions were making casts 
          from different pointer sizes, ommiting the pointed object were 
          different. Thus, writing 8 bytes to a location which was supposed to 
          be 4 bytes long, depending on the locations of those data in the 
          executable (and hence depending on compilation), it could cause 
          really dangerous errors, such as stack corruption for example, in 
          some rare cases. This is now fixed, preventing a rare crash to 
          actually occur.

        - This is the final build for at least a few months. I'll be very busy 
          in the next few month, but I hope i'll be able to submit new fix 
          starting in the summer holidays. 
