@@ -817,3 +817,10 @@ ${make}
 	
 	- This is the final build for at least a few months. I'll be very busy in the next few month, but I hope i'll
 	be able to submit new fix starting in the summer holidays.
+	
+{{Saturday 20, april}}
+
+	- Fixed a bug that caused {Dos9} to crash if either {%PATH%} or {%PATHEXT%} (only for windows) were not in the
+	command environment.
+	
+	- Fixed omition of {ansicon} on the {Dos9_Auto.bat}, which is launched at startup.
